--- a/src/global.css
+++ b/src/global.css
@@ -230,6 +230,50 @@ body {
   animation: wobble2 var(--uib-speed) infinite ease-in-out;
 }
 
+.panel {
+  min-height: 100vh;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
+  color: var(--dark);
+}
+
+.panel.light {
+  background-color: var(--light);
+  color: var(--dark);
+}
+
+.panel.dark {
+  background-color: var(--dark);
+  color: var(--light);
+}
+
+.panel.gray {
+  background-color: #777;
+  background-image: var(--gradient-macha);
+}
+.panel.blue {
+  background-color: #2c7ad2;
+  background-image: var(--gradient-summer-fair);
+}
+.panel.orange {
+  background-color: #e77614;
+  background-image: var(--gradient-orange-crush);
+}
+
+.panel.red {
+  background-color: #c82736;
+  background-image: var(--gradient-lipstick);
+}
+
+.panel.purple {
+  background-color: #8d3dae;
+  background-image: var(--gradient-purple-haze);
+}
+.panel.green {
+  background-color: #28a92b;
+  background-image: var(--gradient-macha);
+}
+
 @keyframes spin78236 {
   0% {
     transform: rotate(0deg);
